# synthetic-portfolio

./: .gitignore  AGENT_INSTRUCTIONS.md  DATASET_GENERATION.md  EVALUATOR_INSTRUCTIONS.md  README.md  SHARED_DATASET_URLS.md  analyze_easy_medium.py  pyproject.toml
configs/: dataset_easy.yaml  dataset_hard.yaml  dataset_medium.yaml  dataset_noise_trap.yaml  dataset_turnover_trap.yaml
examples/: equal_weight_strategy.py  low_vol_strategy.py  mean_reversion_strategy.py  momentum_strategy.py  validation_selected_strategy.py
results/: results.json
src/portfolio_eval/: __init__.py  __main__.py  baselines.py  evaluator.py  generate_all.py  generate_dataset.py  metrics.py  strategy_interface.py
tests/: test_constraints.py  test_metrics.py  test_no_lookahead_interface.py
